# mayalucia

./: .gitignore  .gitmodules  CLAUDE-comprehensive.org  CLAUDE.md  CLAUDE.org  GEMINI.md  linkedin-post.md  manifesto.org  mayalucia.org
.agent-relay/: 2026-02-23-180000-sync-after-restructure.md  2026-02-23-200000-sync-complete-linux.md  2026-02-23-210000-commit-bravli-paper.md  README.md
.gemini/: settings.json
.guardian/: identity  identity.yaml  spirit-session.el
.sutra/: protocol.org
aburaya/: capabilities.org  commissioning.org  governance-v0.org  governance.org  kamaji.org
collab/: architecture.org  context-version-0.org  context.org  develop.org  guidelines.org  index.org  mayalucia.org  notebook.org  scientific-understanding.org  user-stories.org
deployment/: .env.example  Caddyfile  DEPLOY.md  REPORT.md  REPORT.org  deploy.sh  (+1 more)
modules/mayajiva/: .gitignore  CMakeLists.txt  SConstruct
modules/mayajiva/godot/: mayajiva.gdextension  mayajiva.gdextension.uid  project.godot
modules/mayajiva/godot/assets/terrain/: peak.mtl  peak.obj.import  peak_texture.jpg.import
modules/mayajiva/godot/scenes/: main.tscn
modules/mayajiva/godot/scripts/: camera_controller.gd  camera_controller.gd.uid  sim_controller.gd  sim_controller.gd.uid
modules/mayajiva/src/core/: bug.hpp  compass.hpp  landscape.hpp  path_integration.hpp  ring_attractor.hpp
modules/mayajiva/src/gdext/: bug_node.cpp  bug_node.hpp  landscape_resource.cpp  landscape_resource.hpp  register_types.cpp  register_types.h
modules/mayajiva/tests/: test_bug.cpp  test_compass.cpp  test_cpu4.cpp  test_landscape.cpp  test_ring_attractor.cpp
modules/mayajiva/tests/reference/: bug_reference.json  compass_reference.json  cpu4_reference.json  landscape_reference.json  ring_attractor_reference.json
modules/mayajiva/validation/: dump_reference.py
(+565 files in other folders)
